--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -23,17 +24,14 @@
 <!-- Quotes «…»  - Regex to find wrong ones: ('|„|“|”|‘|’) --><!--suppress LongLine --><resources>
     <plurals name="displaying_n_books">
         <item quantity="one">%1$d libro visualizado</item>
-        <item quantity="many">Visualizando %1$d libros</item>
         <item quantity="other">Visualizando %1$d libros</item>
     </plurals>
     <plurals name="n_books_found">
         <item quantity="one">%1$d libro encontrado</item>
-        <item quantity="many">%1$d libros encontrado</item>
         <item quantity="other">%1$d libros encontrados</item>
     </plurals>
     <plurals name="n_stars">
         <item quantity="one">%1$s estrella</item>
-        <item quantity="many">%1$s estrellas</item>
         <item quantity="other">%1$s estrellas</item>
     </plurals>
     <string name="X_acra_resToastText">&APP_NAME; se ha detenido de forma inesperada. Por favor, ayúdenos a mejorar la aplicación reportando este problema.</string>
@@ -178,7 +176,7 @@
     <string name="confirm_delete_book">Se dispone a eliminar el libro con el título «%1$s» de %2$s.\n\n ¿Está seguro de que desea continuar?</string>
     <string name="confirm_delete_bookshelf">¿Realmente eliminar la estantería «%1$s»? Los libros en sí no se eliminarán. Seguirán estando presentes en cualquier otro estante o en el estante «%2$s».</string>
     <string name="confirm_delete_publisher">¿Eliminar realmente el editor «%1$s»?\n\nLos libros en sí no se eliminarán.\n\nConsidere editar el editor y cambiar el nombre del editor por el de otro editor para conservar estos datos.</string>
-    <string name="confirm_delete_series">¿Borrar la serie \"%1$s\"\?
+    <string name="confirm_delete_series">¿Borrar la serie «%1$s»?
 \n
 \nLos libros en sí no se borrarán.
 \n
@@ -197,14 +195,14 @@
     <string name="confirm_rebuild_orderby_columns">Esto reconstruirá los datos de clasificación cuando se reinicie la aplicación. Estás seguro de que quieres continuar ?</string>
     <string name="confirm_registration_benefits">Esta característica se beneficia del registro con %1$s. ¿Desea ver más información o deshabilitar este mensaje?\nPuede encontrar esta información más adelante en la sección «%2$s» en la configuración.</string>
     <string name="confirm_registration_required">Esta función requiere registro con %1$s. ¿Te gustaría ver más información?</string>
-    <string name="confirm_remove_toc_entry">¿Eliminar el título \"%1$s\" de %2$s este libro\?</string>
+    <string name="confirm_remove_toc_entry">¿Eliminar el título «%1$s» de %2$s este libro?</string>
     <string name="confirm_scope_for_change">Has cambiado:
-\n \"%1$s\"
+\n «%1$s»
 \n a
-\n \"%2$s\"
+\n «%2$s»
 \n
-\n¿Cómo desea aplicar este cambio\?
-\nNota: La opción \"%3$s\" se aplicará al instante. Si elige \"%4$s\", se creará un nuevo %5$s.</string>
+\n¿Cómo desea aplicar este cambio?
+\nNota: La opción «%3$s» se aplicará al instante. Si elige «%4$s», se creará un nuevo %5$s.</string>
     <string name="confirm_scope_for_delete">Eliminar el título «%1$s» por %2$s.\n\n¿Cómo desea aplicar este cambio?\nADVERTENCIA: ¡La opción «%3$s» no se puede deshacer!</string>
     <string name="confirm_test_connection">Es recomendable probar esta conexión para evitar problemas más adelante.</string>
     <string name="confirm_unsaved_edits">Hay cambios que no se han guardado. Si sale ahora, se perderán.</string>
