--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -720,7 +721,7 @@
     <string name="lbl_group_1st_char_series_title">1. postava názvu seriálu</string>
     <string name="lbl_group_1st_char_publisher_name">1. znak jména vydavatele</string>
     <string name="lbl_group_1st_char_book_title">1. znak názvu knihy</string>
-    <string name="lbl_author_pseudonym">Toto je pseudonym:</string>
+    <string name="lbl_author_is_a_pen_name_of">Toto je pseudonym:</string>
     <string name="vldt_real_author_must_be_valid">Musí být prázdné nebo existující Autor</string>
     <string name="confirm_create_real_author">„%1$s“ zatím neexistuje. Měly by být vytvořeny?</string>
     <string name="pt_search_resolve_authors_bedetheque">Vyřešte pseudonymy autorů pomocí webových stránek Bedetheque</string>
