--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -714,7 +715,7 @@
     <string name="lbl_group_1st_char_series_title">1. Zeichen des Serientitels</string>
     <string name="lbl_group_1st_char_publisher_name">1. Zeichen des Publisher-Namens</string>
     <string name="lbl_group_1st_char_book_title">1. Zeichen des Buchtitels</string>
-    <string name="lbl_author_pseudonym">Dies ist ein Pseudonym von:</string>
+    <string name="lbl_author_is_a_pen_name_of">Dies ist ein Pseudonym von:</string>
     <string name="vldt_real_author_must_be_valid">Muss leer oder ein vorhandener Autor sein</string>
     <string name="confirm_create_real_author">„%1$s“ existiert noch nicht. Sollen sie erstellt werden?</string>
     <string name="pt_search_resolve_authors_bedetheque">Pseudonyme von Autoren über die Website der Bedetheque auflösen</string>
