--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -717,7 +718,7 @@
     <string name="lbl_group_1st_char_series_title">1° personaggio del titolo della serie</string>
     <string name="lbl_group_1st_char_publisher_name">1° carattere del nome dell\'editore</string>
     <string name="lbl_group_1st_char_book_title">1° carattere del titolo del libro</string>
-    <string name="lbl_author_pseudonym">Questo è uno pseudonimo di:</string>
+    <string name="lbl_author_is_a_pen_name_of">Questo è uno pseudonimo di:</string>
     <string name="vldt_real_author_must_be_valid">Deve essere vuoto o deve essere un autore esistente</string>
     <string name="confirm_create_real_author">“%1$s” non esiste ancora. Devono essere creati?</string>
     <string name="pt_search_resolve_authors_bedetheque">Risolvi gli pseudonimi degli autori utilizzando il sito Web di Bedetheque</string>
