--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -724,7 +725,7 @@
     <string name="lbl_group_1st_char_series_title">Pierwszy znak tytułu serii</string>
     <string name="lbl_group_1st_char_publisher_name">Pierwszy znak nazwy wydawcy</string>
     <string name="lbl_group_1st_char_book_title">Pierwszy znak tytułu książki</string>
-    <string name="lbl_author_pseudonym">To jest pseudonim:</string>
+    <string name="lbl_author_is_a_pen_name_of">To jest pseudonim:</string>
     <string name="vldt_real_author_must_be_valid">Musi być puste lub istniejącego autora</string>
     <string name="confirm_create_real_author">„%1$s” jeszcze nie istnieje. Czy należy je tworzyć?</string>
     <string name="pt_search_resolve_authors_bedetheque">Rozwiąż pseudonimy autorów za pomocą strony internetowej Bedetheque</string>
