--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <!--
   ~ @Copyright 2018-2023 HardBackNutter
   ~ @License GNU General Public License
@@ -727,7 +728,7 @@
     <string name="lbl_group_1st_char_publisher_name">1-й символ имени издателя</string>
     <string name="lbl_group_1st_char_book_title">1-й символ названия книги</string>
     <string name="debug_select_items">Выберите, что вы хотите включить:</string>
-    <string name="lbl_author_pseudonym">Это псевдоним:</string>
+    <string name="lbl_author_is_a_pen_name_of">Это псевдоним:</string>
     <string name="vldt_real_author_must_be_valid">Должно быть пустым или существующим автором</string>
     <string name="confirm_create_real_author">«%1$s» еще не существует. Должны ли они быть созданы?</string>
     <string name="pt_search_resolve_authors_bedetheque">Разрешить авторские псевдонимы с помощью веб-сайта Bedetheque</string>
