--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1526,5 +1526,10 @@
     <string name="lbl_strip_info_mapped_bookshelf_owned_books">Owned books mapped bookshelf</string>
     <string name="pt_search_show_shopping_options">Show shopping menus</string>
     <string name="lbl_standardize">Standardize</string>
+    <!-- Abbreviated "pseudonym for [author]".
+         Used to display "Author-pen-name (pseudonym for real-name)"
+    -->
+    <string name="lbl_author_pseudonym_of_X">ps. %1$s</string>
+
     <!--    <string name="confirm_strip_info_import_collection">Do you want to import all your books? This could take some time. We strongly advice to take a backup before proceeding!</string>-->
 </resources>
